fix(references): visible overflow for all child elements

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -7,7 +7,7 @@ p, #refs, *:not(div):not(img):not(body):not(html):not(li):not(blockquote):not(p)
     max-width: 1000px;
 }
 
-#refs > * {
+#refs * {
     overflow: visible;
 }
 
